--- a/ReMuseMe/src/styles.css
+++ b/ReMuseMe/src/styles.css
@@ -10,8 +10,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
 body{
     background-image: url('./app/Assets/annie-spratt-pdyQ3Ox-UEU-unsplash.jpg');
     background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-repeat: space;
+    background-attachment: scroll;
 }
 
 
